--- a/templates/modalSeeVoucher.twig
+++ b/templates/modalSeeVoucher.twig
@@ -3,6 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header background-template-color">
 				<button id="buttonExportVoucher" class="btn btn-sm background-template-color2 text-template-background shadow-sm">Imprimir <i class="fas fa-print"></i></button>
+				<button id="buttonDownloadVoucher" class="btn btn-sm ml-1 background-template-color2 text-template-background shadow-sm">Descargar <i class="fas fa-save"></i></button>
 				<button id="buttonCancelVoucher" style="visibility: hidden;" class="btn btn-sm background-template-color2 text-template-background shadow-sm ml-1"><i class="fas fa-ban"></i> Anular</button>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
