modal see voucher feeServices updated to normal see voucher

--- a/templates/feeServices.twig
+++ b/templates/feeServices.twig
@@ -211,7 +211,8 @@
 	<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header background-template-color">
-				<button id="buttonExportVoucherFee" class="btn btn-sm background-template-color2 text-template-background shadow-sm ml-1 mr-3"><i class="fas fa-print"></i> Imprimir</button>
+				<button id="buttonExportVoucherFee" class="btn btn-sm background-template-color2 text-template-background shadow-sm ml-1"><i class="fas fa-print"></i> Imprimir</button>
+				<button id="buttonDownloadVoucher" class="btn btn-sm ml-1 background-template-color2 text-template-background shadow-sm">Descargar <i class="fas fa-save"></i></button>
 				<button id="buttonCancelVoucherFee" style="visibility: hidden;" class="btn btn-sm background-template-color2 text-template-background shadow-sm ml-1"><i class="fas fa-ban"></i> Anular</button>
 				<button type="button" id="buttonCloseVoucherFee" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
