CFE now decrease the stocks

--- a/templates/manualReceiptsProviders.twig
+++ b/templates/manualReceiptsProviders.twig
@@ -16,12 +16,12 @@
 				<table class="table table2 table-striped">
 					<thead class="background-template-color text-template-color">
 						<tr>
-							<th class="text-right" scope="col">Fecha</th>
+							<th class="text-right" scope="col" style="max-width: 110px; min-width: 110px; width: 110px;">Fecha</th>
 							<th class="text-right toHidden1" scope="col">Documento</th>
-							<th class="text-right" scope="col">Nombre</th>
-							<th class="text-right toHidden1" scope="col">Moneda</th>
+							<th class="text-left col-4" scope="col">Nombre</th>
+							<th class="text-right toHidden1" scope="col" style="max-width: 90px; min-width: 90px; width: 90px;">Moneda</th>
 							<th class="text-right" scope="col">Total</th>
-							<th class="text-center" scope="col">Acción</th>
+							<th class="text-center" scope="col" style="max-width: 110px; min-width: 110px; width: 110px;">Acción</th>
 						</tr>
 					</thead>
 					<tbody id="tbodyManualReceipt"></tbody>
