--- a/templates/slider.twig
+++ b/templates/slider.twig
@@ -5,7 +5,7 @@
         </div>
         <h4 class="text-template-background text-center font-italic ml-1">Efactura</h4>
         {% if systemSession %}
-        <span class="text-template-background text-center font-italic ml-1 m-0">{{ systemSession.business }}</span>
+        <span class="text-template-background text-center font-italic ml-1 m-0">{{ systemSession.empresa }}</span>
         {% endif %}
     </div>
 
