--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -289,6 +289,15 @@
 							</div>
 							<p class="ml-2">Permitir facturar notas de débito.</p>
 						</div>
+						<div class="input-group">
+							<div class="input-group-prepend">
+								<label class="switch">
+									<input id="MANEJO_DE_STOCK" type="checkbox" onchange="updateConfigurationBoolean(this)">
+									<span class="slider round"></span>
+								</label>
+							</div>
+							<p class="ml-2">Manejo de stock.</p>
+						</div>
 						<hr>
 						<div id="">
 							<div class="row form-group mb-2">
